<resources>
    <string name="app_name">alsalah</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_azkar">الأذكار</string>
    <string name="title_profile">البروفايل</string>
    <string name="title_alarm">منبة الطاعات</string>
    <string name="next_prayer_time">00:01:30</string>
    <string name="fajr">الفجر</string>
    <string name="zuhr">الظهر</string>
    <string name="am">ص</string>
    <string name="pm">م</string>
    <string name="asr">العصر</string>
    <string name="eshaa">العشاء</string>
    <string name="maghrib">المغرب</string>
    <string name="shorooq">الشروق</string>
    <string name="midnight">منتصف الليل</string>
    <string name="last_quarter">الثلث الأخير</string>
    <string name="azkar_exp">أَسْـتَغْفِرُ الله، أَسْـتَغْفِرُ الله، أَسْـتَغْفِرُ الله
اللّهُـمَّ أَنْـتَ السَّلامُ ، وَمِـنْكَ السَّلام ،
تَبارَكْتَ يا ذا الجَـلالِ وَالإِكْـرام</string>
    <string name="blog_exp">القاهرة- خص الله تعالى شهر رمضان بليلة مباركة تتطلّع فيها القلوب المؤمنة بالرجاء والدعوات، يقول تعالى في كتابه العزيز: “إنا أنزلناه في ليلة القدر، وما أدراك ما ليلة القدر، ليلة القدر خير من ألف شهر”.. وهي ليلة السلام والتسامح، وتحظى بمنزلة خاصة في قلوب المسلمين، وفرصة تتكرر كل عام ليوثق فيها العبد علاقته مع الخالق جل جلاله.</string>
    <string name="title_menu">القائمة</string>
    <string name="language">اللغة</string>
    <string name="generalSetting">الاعدادات العامة</string>
    <string name="backgroundPermission">تفعيل المصلي للعمل في الخلفية</string>
    <string name="locationPermission">اعطاء تصريح الوصول الى الموقع تلقائيا</string>
    <string name="solveAzanProblem">حل مشاكل الاذان لبعض الاجهزة</string>
    <string name="azanSoundType">اختيار نمط صوت الاذان</string>
    <string name="editPrayerTime">تصحيح مواقيت الصلاة</string>
    <string name="calculateWay">طريقة الحساب</string>
    <string name="almazhab">المذهب - تصحيح صلاة العصر</string>
    <string name="summerTime">التوقيت الصيفي</string>
    <string name="localTime">المنطقة الزمنية</string>
    <string name="poleCalculateWay">طريقة حساب الاماكن القطبية</string>
    <string name="defaultSettingPrayer">الاعدادات الافتراضية للصلاة</string>
    <string name="location">الموقع</string>
    <string name="getLocaAutomatically">تحديد الموقع اليا</string>
    <string name="travelMode">وضع السفر</string>
    <string name="azkarSetting">اعدادت الاذكار</string>
    <string name="azanSetting">اعدادت الاذان</string>
    <string name="azanScreen">شاشة الاذان</string>
    <string name="notifications">التنبيهات</string>
    <string name="notification_sound">صوت التنبية</string>
    <string name="azanIkama">اذان واقامة</string>
    <string name="nawafel">النوافل</string>
    <string name="friday">الجمعة</string>
    <string name="fasting">الصيام</string>
    <string name="silencePhone">جعل الهاتف صامت اثناء الصلاة</string>
    <string name="azkarNotification">تنبيهات الاذكار</string>
    <string name="heartsNotification">تنبيهات الفوائد</string>
    <string name="main">الرئيسية</string>
    <string name="setting">الاعدادت</string>
    <string name="sebha">السبحة</string>
    <string name="compass">القبلة</string>
    <string name="quran">ورد القران</string>
    <string name="fwaed">الفوائد</string>
    <string name="mosques">مساجد</string>
    <string name="calendar">التقويم</string>
    <string name="fajrList">قائمة الفجر</string>
    <string name="it_support">الدعم الفني</string>
    <string name="faq">الأسئلة الشائعة</string>
    <string name="who_are_we">من نحن</string>
    <string name="follow_us">تابعنا</string>
    <string name="rate_app">قيم البرنامج</string>
    <string name="usingCompass">بالبوصلة</string>
    <string name="by_sun_and_moon">بالشمس والقمر</string>
    <string name="by_vision">المرئية</string>
    <string name="welcome_to_fajrlist">مرحبا بك في \n قائمة الفجر</string>
    <string name="addContacts">اضف جهات اتصال</string>
    <string name="tasbeh_exp">لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلُّ شَيْءِ قَدِيرِ.
كانت له عدل عشر رقاب، وكتبت له مئة حسنة، ومحيت عنه مئة سيئة، وكانت له حرزا من الشيطان.</string>
    <string name="fajr_prayer_notification">حان الآن موعد صلاة الفجر</string>
    <string name="zuhr_prayer_notification">حان الآن موعد صلاة الظهر</string>
    <string name="asr_prayer_notification">حان الآن موعد صلاة العصر</string>
    <string name="maghrib_prayer_notification">حان الآن موعد صلاة المغرب</string>
    <string name="isha_prayer_notification">حان الآن موعد صلاة العشاء</string>
    <string name="fajr_prayer_soon_notification">اقتربت صلاة الفجر</string>
    <string name="zuhr_prayer_soon_notification">اقتربت صلاة الظهر</string>
    <string name="asr_prayer_soon_notification">اقتربت صلاة العصر</string>
    <string name="maghrib_prayer_soon_notification">اقتربت صلاة المغرب</string>
    <string name="isha_prayer_soon_notification">اقتربت صلاة العشاء</string>
    <string name="prayer_notification">حان الآن موعد الصلاة</string>
    <string name="iqama_notification">قد قامت الصلاة</string>
    <string name="continue_using">للاستمرار في تلقى الاشعارات برجاء فتح التطبيق باستمرار</string>
    <string name="channel_name">prayer_times</string>
    <string name="channel_description">مواعيد الصلاة</string>
    <string name="technical_support">الدعم الفني</string>
    <string name="sendInquiry">ارسل استفسارك</string>
    <string name="stop">stop</string>
    <string name="juz1">الجزء الأول</string>
    <string name="juz2">الجزء الثاني</string>
    <string name="juz3">الجزء الثالث</string>
    <string name="juz4">الجزء الرابع</string>
    <string name="juz5">الجزء الخامس</string>
    <string name="juz6">الجزء السادس</string>
    <string name="juz7">الجزء السابع</string>
    <string name="juz8">الجزء الثامن</string>
    <string name="juz9">الجزء التاسع</string>
    <string name="juz10">الجزء العاشر</string>
    <string name="juz11">الجزء الحادي عشر</string>
    <string name="juz12">الجزء الثاني عشر</string>
    <string name="juz13">الجزء الثالث عشر</string>
    <string name="juz14">الجزء الرابع عشر</string>
    <string name="juz15">الجزء الخامس عشر</string>
    <string name="juz16">الجزء السادس عشر</string>
    <string name="juz17">الجزء السابع عشر</string>
    <string name="juz18">الجزء الثامن عشر</string>
    <string name="juz19">الجزء التاسع عشر</string>
    <string name="juz20">الجزء العشرون</string>
    <string name="juz21">الجزء الحادي والعشرون</string>
    <string name="juz22">الجزء الثاني والعشرون</string>
    <string name="juz23">الجزء الثالث والعشرون</string>
    <string name="juz24">الجزء الرابع والعشرون</string>
    <string name="juz25">الجزء الخامس والعشرون</string>
    <string name="juz26">الجزء السادس والعشرون</string>
    <string name="juz27">الجزء السابع والعشرون</string>
    <string name="juz28">الجزء الثامن والعشرون</string>
    <string name="juz29">الجزء التاسع والعشرون</string>
    <string name="juz30">الجزء الثلاثون</string>
    <string name="north">North</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="qibla">Qibla</string>
    <string name="mercury">عطارد</string>
    <string name="venus">الزهرة</string>
    <string name="earth">الأرض</string>
    <string name="mars">المريخ</string>
    <string name="jupiter">المشتري</string>
    <string name="saturn">زحل</string>
    <string name="uranus">أورانوس</string>
    <string name="neptune">نبتون</string>
    <string name="pluto">بلوتو</string>
    <string name="sun">الشمس</string>
    <string name="moon">القمر</string>
    <string name="empty"></string>
    <string name="sunday">الأحد</string>
    <string name="monday">الإثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="saturday">السبت</string>
    <string name="event_day"><font color="#EEB34B">%1$s</font> <font color="#ffffff">%2$s </font> <font color="#EEB34B">%3$s</font></string>
    <string name="arabic">العربيه</string>
    <string name="english">الانجليزية</string>
    <string name="frecnh">الفرنسية</string>
    <string name="turkish">التركية</string>
    <string name="dutch">الدوتشية</string>
    <string name="spanish">الاسبانية</string>
    <string name="indonisian">الاندونيسية</string>
    <string name="urdu">الاوردية</string>
    <string name="igorish">الايغورية</string>
    <string name="alll">كل اللغات</string>
    <string name="fawaedNotifications">تفعيل تنبيهات الفوائد</string>
    <string name="mecca">أم القرى - مكة</string>
    <string name="islamicUniversity">جامعة العلوم الإسلامية</string>
    <string name="islamicUniversitySouthAmerica">الجامعة الإسلامية بشمال امريكا</string>
    <string name="egyptianMessaha">هيئة المساحة المصرية</string>
    <string name="worlwideIslamicCommunity">رابطة العالم الاسلامي</string>
    <string name="turkishResponsibles">تركيا وئاسة الشؤن الدينية</string>
    <string name="france">فرنسا</string>
    <string name="russia">روسيا</string>
    <string name="specific">تخصيص</string>
    <string name="three_mazhabs">حنبلي - شافعي - مالكي</string>
    <string name="hanafi">حنفي</string>
    <string name="fajrMinutes">تصحيح الفجر بالدقائق</string>
    <string name="shrooqMinutes">تصحيح الشروق بالدقائق</string>
    <string name="zuhrMinutes">تصحيح الظهر بالدقائق</string>
    <string name="asrMinutes">تصحيح العصر بالدقائق</string>
    <string name="maghribMinutes">تصحيح المغرب بالدقائق</string>
    <string name="ishaMinutes">تصحيح العشاء بالدقائق</string>
    <string name="refactor">إعادة ضبط</string>
    <string name="nothing">لا يوجد</string>
    <string name="one_of_seven">سبع الليل</string>
    <string name="angelar">باستخدام الزاوية</string>
    <string name="pressHere">اضغط هنا</string>
    <string name="getLocationAutomatically">تحديد الموقع اليا</string>
    <string name="sucsessfullyGotLocaction">تم تحديد موقعك بنجاح</string>
    <string name="agree">موافق</string>
    <string name="tryAnotherWay">التحديد بطريقة اخرى</string>
    <string name="counter">العداد</string>
    <string name="viberateWithClick">اهتزاز مع كل ضغطة</string>
    <string name="autoMigerate">تفعيل الانتقال التلقائي</string>
    <string name="morning_azkar">اذكار الصباح</string>
    <string name="night_azkar">اذكار المساء</string>
    <string name="sleep_azkar">اذكار النوم</string>
    <string name="after_prayer_azkar">أذكار بعد الصلاة</string>
    <string name="azanSoundAndImage">اصوات وخلفيات الاذان</string>
    <string name="azanIkamaSetting">اعدادات الاذان والإقامة</string>
    <string name="azan_background">خلفيات الاذان</string>
    <string name="naturalViews">خلفيات طبيعية</string>
    <string name="soundFromPhone">اصوات من الهاتف</string>
    <string name="azanSound">اصوات الاذان</string>
    <string name="chooseFromGallery">اختر من ملفاتك الخاصة</string>
    <string name="soundFromApp">اصوات من البرنامج</string>
    <string name="iqamaSound">اصوات الاقامة</string>
    <string name="ringtone">جرس</string>
    <string name="apply_for_all_prayers">تطبيق الاعدادات لكل الصلوات</string>
    <string name="notify_before_prayer">تنبيه قبل الاذان</string>
    <string name="notify_at_prayer">تنبيه بالاذان</string>
    <string name="notify_at_iqama">تنبيه وقت الاقامة</string>
    <string name="alarmTime">وقت التنبية</string>
    <string name="time_before_prayer">تنبيه قبل الاذن بالدقائق</string>
    <string name="notify_before_prayer_minutes">تنبيه قبل الاذن بالدقائق</string>
    <string name="permission_read_external_storage">"اعطاء التصاريح لاختيار ملف "</string>
    <string name="khatma">ختمة</string>
    <string name="addKhatma">إضافة ختمة جديدة</string>
    <string name="expectedTime">المدة المتوقعه</string>
    <string name="fromDaysCalculation">عن طريق تحديد عدد الايام المتوقعه لانهاء الختمه</string>
    <string name="expectedwerd">معدل الورد اليومي</string>
    <string name="fromWerdAmount">عن طريق الكم الذي تريد قراءته كل يوم</string>
</resources>