<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#519259"
    app:cardCornerRadius="@dimen/_16sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:gravity="center"
        android:id="@+id/legendLayout"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/legendText1"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText2"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText3"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText4"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText5"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText6"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/legendText7"
            style="@style/lightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>