<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.crazyidea.alsalah.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_azkar"
        android:name="com.crazyidea.alsalah.ui.azkar.AzkarFragment"
        android:label="@string/title_azkar"
        tools:layout="@layout/fragment_azkar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.crazyidea.alsalah.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.crazyidea.alsalah.ui.menu.MenuFragment"
        tools:layout="@layout/fragment_menu"
        android:label="MenuFragment" >
        <action
            android:id="@+id/action_navigation_menu_to_fajrListFragment"
            app:destination="@id/fajrListFragment" />
        <action
            android:id="@+id/action_navigation_menu_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_navigation_menu_to_compassFragment"
            app:destination="@id/compassFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.crazyidea.alsalah.ui.menu.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/compassFragment"
        android:name="com.crazyidea.alsalah.ui.menu.compass.CompassFragment"
        android:label="CompassFragment"
        tools:layout="@layout/fragment_qibla"/>
    <fragment
        android:id="@+id/fajrListFragment"
        android:name="com.crazyidea.alsalah.ui.menu.fajrlist.FajrListFragment"
        android:label="FajrListFragment"
        tools:layout="@layout/fragment_fajr_list" />
</navigation>