<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/boldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dinnextregular"
            android:text="@string/getLocationAutomatically"
            android:textColor="@color/text_main"
            android:textSize="@dimen/_18sdp" />


        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/img_loca" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:fontFamily="@font/dinnextregular"
            android:text="@string/sucsessfullyGotLocaction"
            android:textColor="@color/text_main"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_location"
            app:tint="?colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:fontFamily="@font/dinnextregular"
            android:text="مصر"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/_18sdp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/next_prayer_bg"
            android:fontFamily="@font/din_medium"
            android:padding="@dimen/_4sdp"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tryAnotherWay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="?colorPrimary"
            android:fontFamily="@font/din_medium"
            android:padding="@dimen/_4sdp"
            android:text="@string/tryAnotherWay"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img_container" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>