<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_light_night"
    tools:context=".ui.compass.CompassFragment">

    <TextView
        android:id="@+id/title"
        style="@style/boldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/compass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <LinearLayout
        android:id="@+id/buttonsLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/byCompassBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_state_colors"
            android:fontFamily="@font/din_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/usingCompass"
            android:textColor="@color/button_text_state_colors"
            app:cornerRadius="@dimen/_16sdp"
            app:strokeColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/by_sun_and_moon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/button_state_colors"
            android:fontFamily="@font/din_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/by_sun_and_moon"
            android:textColor="@color/button_text_state_colors"
            app:cornerRadius="@dimen/_16sdp"
            app:strokeColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/by_vision"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/button_state_colors"
            android:fontFamily="@font/din_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/by_vision"
            android:textColor="@color/button_text_state_colors"
            app:cornerRadius="@dimen/_16sdp"
            app:strokeColor="?attr/colorPrimary" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_img_compass_middle"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLin" />

    <com.crazyidea.alsalah.ui.compass.CompassView
        android:id="@+id/compass_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLin" />

</androidx.constraintlayout.widget.ConstraintLayout>
