<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_light_night"
    tools:context=".ui.compass.CompassFragment">

    <TextView
        android:id="@+id/title"
        style="@style/boldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/technical_support"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />


    <ImageView
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/technical_img"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_technical_support" />


    <LinearLayout
        android:id="@+id/buttonsLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/technical_img"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendInquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/next_prayer_bg"
            android:padding="@dimen/_8sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:textColor="@color/white"
            android:text="@string/sendInquiry"
            android:fontFamily="@font/din_medium"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/next_prayer_bg"
            android:padding="@dimen/_8sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/white"
            android:text="@string/faq"
            android:fontFamily="@font/din_medium"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>