<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        style="@style/boldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/fwaed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />


    <TextView
        android:id="@+id/languagetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/header_color"
        android:fontFamily="@font/din_medium"
        android:paddingStart="@dimen/_30sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languagesRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/languagetext"
        tools:itemCount="3"
        tools:listitem="@layout/item_language" />


    <TextView

        android:id="@+id/notificationtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@color/header_color"
        android:fontFamily="@font/din_medium"
        android:paddingStart="@dimen/_30sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesRV" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:id="@+id/notificationCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/notificationtext"
        android:layout_marginTop="@dimen/_4sdp">

        <com.suke.widget.SwitchButton
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sb_checked="true"
            app:sb_checked_color="?attr/colorPrimary" />

        <TextView
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/fawaedNotifications"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>